@startuml

package com.kf.coffeecard{
    class AbstractService
    class GameProxyService{
        -Game mGame
        +Game GetGameInfo()
    }
    class GameFactory{
        -Game mGame
        -static GameFactory mInstance
        +void createGame();
    }
    class Game{
        -Player[] mPlayers
        +enum GameType{
            BRIDGE,
            BLACK_JACK,
            SEVENS,
            LIAR;}
    }
    class BridgeGame{
        -GameType mGameType
        -GameRule mRule
        +void startGame()
        -void Deal()
    }
    class CardSet
    class Player
    class BridgePlayer
    class GameRule

    GameProxyService --|>AbstractService

    BridgeGame --|> Game
    Game <--* GameFactory

    BridgeGame <--o CardSet
    GameProxyService --> GameFactory

    Game <--o Player
    Game <--o GameRule

    BridgePlayer --|> Player
}

package com.kf.coffeecard.activity{
    class MainActivity
    class SettingActivity
    class BridgeGameActivity{
        -Game mGame
        -PlayerFragment[] mPlayerFragments
    }

    MainActivity --> SettingActivity
    SettingActivity <--> GameProxyService:start/bind service
    SettingActivity --> BridgeGameActivity
    BridgeGameActivity<--> GameProxyService:bind service
}

package com.kf.coffeecard.fragment{
    class PlayerFragment
    BridgeGameActivity <--> PlayerFragment
}

@enduml